--- a/client/components/footer/footer.jade
+++ b/client/components/footer/footer.jade
@@ -1,8 +1,7 @@
 footer.footer
   .wrapper.row
     .col-sm-8.col-sm-offset-2
-      small &copy; 2015 Flexion Inc. All rights reserved. Flexion&reg; is a
-      registered trademark of Flexion Inc. 
+      small &copy; 2015 Flexion Inc. All rights reserved. Flexion&reg; is a registered trademark of Flexion Inc. 
       a(href="/privacy") Privacy
-      |
+      |  | 
       a(href="/terms") Terms
