--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -11,4 +11,25 @@ div.container.search__group
         span.glyphicon.glyphicon-search(aria-hidden='true')
 
 div
-  p {{ reports }}
+  table.table.no-margin.table-striped.table-hover.table-bordered
+    thead
+      tr
+        th
+          | Product&nbsp;&nbsp;
+
+        th
+          | Locale&nbsp;&nbsp;
+
+        th
+          | Recalling Firm&nbsp;&nbsp;
+        th
+          | Status&nbsp;&nbsp;
+
+
+    tbody
+      tr(ng-repeat='recall in reports | orderBy: "report_date": true')
+        td {{ recall.product_description | limitTo: 50 }}
+        td {{recall.city}}, {{ recall.state }} {{ recall.country }}
+        td {{recall.recalling_firm }}
+        td {{ recall.status }}
+
