adding in colors and form

--- a/client/components/header/header.jade
+++ b/client/components/header/header.jade
@@ -6,14 +6,10 @@ header.site-header
       | OpenFDA. OpenFDA is a beta research project and is not real-time.
   .row.banner
     .col-sm-8.col-sm-offset-2
-      a.site__title(href="/")
-        span.logo(aria-hidden="true")
-        | Picnic Rescue
+      a.site__title.logo(href="/") Picnic Rescue
       p.site__subtitle Be the hero at your next family gathering by avoiding recalled food items!
   nav.row.navigation(role="navigation")
     ul.col-sm-8.col-sm-offset-2
-      li
-        button.btn.btn-default(type="submit") Find Local Recalls
       li
         a(href="/about/") About
       li
