--- a/client/app/main/_layout.scss
+++ b/client/app/main/_layout.scss
@@ -1,5 +1,10 @@
-
-
+body {
+  background-color: $secondary;
+  font-family: "Lato", "Helvetica", sans-serif; 
+}
+.main {
+  padding-top: 30px;
+}
 .right  {
   float: right;
 }
