--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -1,81 +1,40 @@
-div.container.search__group
-  h1.search__title Food Recall Search
-  form.search-form.input-group.input-group-lg(no-validate)
-    label.sr-only(for='search') Search
-    div.form-control(aria-live="assertive")
-      input#search.search__field(type='text', ng-model='food')
-    span.input-group-btn
-      button.search__button.btn.btn-default(type='submit',
-      ng-click='startSpin();search(food)')
-        span.sr-only Search Database
-        span.glyphicon.glyphicon-search(aria-hidden='true')
-
-div
-  span(us-spinner='', spinner-key='spinner-1')
-
-
-div
-  table.table.no-margin.table-striped.table-hover.table-bordered
-    thead
-      tr
-        th
-          | Recall Date
-        th
-          | Product&nbsp;&nbsp;
-
-        th
-          | Locale&nbsp;&nbsp;
-
-        th
-          | Recalling Firm&nbsp;&nbsp;
-        th
-          | Status&nbsp;&nbsp;
-
-
-    tbody
-      tr(ng-repeat='recall in reports | orderBy: "report_date": true')
-        td {{ recall.report_date | recallDate }}
-        td {{ recall.product_description | limitTo: 50 }}
-        td {{recall.city}}, {{ recall.state }} {{ recall.country }}
-        td {{recall.recalling_firm }}
-        td {{ recall.status }}
-
-  p {{ reports }}div(ng-include="header.html")
 div(ng-include='"components/header/header.html"')
 main.main.row(role="main")
-  .panel.col-sm-8.col-sm-offset-2
-    form
-      label.visuallyHidden(for="search") Search Recalled Foods
-      input#search.search.form-control(type="text")
-      button.btn.btn-primary(type="submit") Find Local Recalls
+  .input-group.col-sm-8.col-sm-offset-2
+    form.search-form(no-validate)
+      label.sr-only(for="search") Search Recalled Foods
+      input#search.search.form-control(type="text", ng-model='food')
+      .input-group-btn
+        button.btn.btn-primary(type="submit", ng-click='search(food)') Find Local Recalls
   .col-sm-8.col-sm-offset-2
     h1 {{state}} Food Recall Results
       small.update Database last updated &ndash; {{date}}
-    article.product__card
-      h2.product__title {{product-descriotion}}
-        div.btn.btn-primary
-          span.glyphicon.glyphicon-plus
-          | View Recall Details
-      .product__details.visuallyHidden
-        ul
-          li.recall__details
-            span.icon
-            em Recall Reason:
-            | {{reason-for-recall}}
-          li.recall__states
-            span.icon
-            em Affected States:
-            | {{distribution-pattern}}
-          li.recall__report-date
-            span.icon
-            em Report Date:
-            | {{report-date}}
-          li.recall__classification
-            span.icon
-            em Classification:
-            | {{classification}}
-          li.recall__code-info
-            span.icon
-            em Product Code:
-            | {{code-info}}
+    div(ng-repeat='report in reports')
+      article.product__card
+        h2.product__title {{report.product-description}}
+          div.btn.btn-primary
+            span.glyphicon.glyphicon-plus
+            | View Recall Details
+        .product__details.sr-only
+          ul
+            li.recall__details
+              span.icon
+              em Recall Reason:
+              | {{report.reason-for-recall}}
+            li.recall__states
+              span.icon
+              em Affected States:
+              | {{report.distribution-pattern}}
+            li.recall__report-date
+              span.icon
+              em Report Date:
+              | {{report.report-date}}
+            li.recall__classification
+              span.icon
+              em Classification:
+              | {{report.classification}}
+            li.recall__code-info
+              span.icon
+              em Product Code:
+              | {{report.code-info}}
 div(ng-include='"components/footer/footer.html"')
