repeating cards and data results.

--- a/client/app/main/_variables.scss
+++ b/client/app/main/_variables.scss
@@ -9,27 +9,27 @@ $accentFour: #353535;
 
 /* shade */
 
-$primaryShade: #ff561d;
-$secondaryShade: #f7f5f1;
-$accentOneShade: #00b4ff;
-$accentTwoShade: #2ce3a4;
-$accentThreeShade: #e6da00;
-$accentFourShade: #353535;
+$primaryShade: #b23b1e;
+$secondaryShade: #aeaba9;
+$accentOneShade: #127eb2;
+$accentTwoShade: #299e74;
+$accentThreeShade: #a2961d;
+$accentFourShade: #252325;
 /* tint */
 
-$primaryTint: #ff561d;
-$secondaryTint: #f7f5f1;
-$accentOneTint: #00b4ff;
-$accentTwoTint: #2ce3a4;
-$accentThreeTint: #e6da00;
-$accentFourtint: #353535;
+$primaryTint: #fd8766;
+$secondaryTint: #faf7f5;
+$accentOneTint: #54cafd;
+$accentTwoTint: #72eac0;
+$accentThreeTint: #ece059;
+$accentFourTint: #727072;
 /* pastel */
 
-$primaryPastel: #ff561d;
-$secondaryPastel: #f7f5f1;
-$accentOnePastel: #00b4ff;
-$accentTwoPastel: #2ce3a4;
-$accentThreePastel: #e6da00;
-$accentFourPastel: #353535;
+$primaryPastel: #fedcd4;
+$secondaryPastel: #fefcfe;
+$accentOnePastel: #ceeffe;
+$accentTwoPastel: #d7f9ee;
+$accentThreePastel: #fcf7d0;
+$accentFourPastel: #d8d6d8;
 
 
