--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -8,7 +8,7 @@ main.main.row(role="main")
         button.btn.btn-primary(type="submit", ng-click='search(food)') Find Local Recalls
   .col-sm-8.col-sm-offset-2
     h1 Food Recall Results
-      small.update Database last updated &ndash; {{date}}
+      small.update &nbsp;Database last updated &ndash; {{date}}
     div(ng-repeat='recall in reports | orderBy: "report_date": true')      
       article.product__card
         h2.product__title {{recall.product_description | limitTo:50 }}
@@ -19,22 +19,22 @@ main.main.row(role="main")
           ul
             li.recall__details
               span.icon
-              em Recall Reason:
+              em Recall Reason:&nbsp;
               | {{recall.reason_for_recall}}
             li.recall__states
               span.icon
-              em Affected States:
+              em Affected States:&nbsp;
               | {{recall.distribution_pattern}}
             li.recall__report-date
               span.icon
-              em Report Date:
-              | {{recall.report_date}}
+              em Report Date:&nbsp;
+              | {{recall.report_date | recallDate}}
             li.recall__classification
               span.icon
-              em Classification:
+              em Classification:&nbsp;
               | {{recall.classification}}
             li.recall__code-info
               span.icon
-              em Product Code:
+              em Product Code:&nbsp;
               | {{recall.code_info}}
 div(ng-include='"components/footer/footer.html"')
