--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -6,12 +6,12 @@ main.main.row(role="main")
       input#search.search.form-control(type="text", ng-model='food')
       .input-group-btn
         button.btn.btn-primary(type="submit", ng-click='search(food)') Find Local Recalls
-  .col-sm-8.col-sm-offset-2
+  div(ng-show='reports.length > 0').col-sm-8.col-sm-offset-2
     h1 Food Recall Results
-      small.update &nbsp;Database last updated &ndash; {{date}}
-    div(ng-repeat='recall in reports | orderBy: "report_date": true')      
+      small.update &nbsp;Database last updated &ndash; {{meta.last_updated}}
+    div(ng-repeat='recall in reports | orderBy: "report_date": true')
       article.product__card
-        h2.product__title {{recall.product_description | limitTo:50 }}
+        h2.product__title {{recall.product_description }}
           div.btn.btn-primary
             span.glyphicon.glyphicon-plus
             | View Recall Details
