--- a/client/components/footer/footer.jade
+++ b/client/components/footer/footer.jade
@@ -1,6 +1,7 @@
 footer.footer
   .wrapper.row
-    .col-sm-8.col-sm-offset-2
+    .col-sm-12.col-md-8.col-md-offset-2.col-lg-6.col-lg-offset-3
+
       small &copy; 2015 Flexion Inc. All rights reserved. Flexion&reg; is a registered trademark of Flexion Inc. 
       a(href="/privacy") Privacy
       |  | 
