--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -8,17 +8,17 @@ main.main.row(role="main")
         .input-group-btn
           button.btn.btn-primary(type="submit", ng-click='search(food)') Find Local Recalls
   
-  div(ng-show='reports.length > 0').col-sm-12.col-md-8.col-md-offset-2.col-lg-6.col-lg-offset-3
+  div(ng-show='reports.length > 0', aria-live="assertive").col-sm-12.col-md-8.col-md-offset-2.col-lg-6.col-lg-offset-3
     h1 Food Recall Results
       small.update &nbsp;Database last updated &ndash; {{meta.last_updated}}
   
     div(ng-repeat='recall in reports | orderBy: "report_date": true')      
       article.product__card.row
         h2.product__title.col-xs-8 {{recall.product_description | limitTo:45 }}
-        div.btn.btn-primary.col-xs-3
+        button.btn.btn-primary.col-xs-3(ng-click="isCollapsed = !isCollapsed")
           span.glyphicon.glyphicon-plus
           | View Recall Details
-        .product__details
+        .product__details(collapse="!isCollapsed")
           ul
             li.recall__details
               span.icon
