Issue 42 MSWord Fancy Pants Quote Marks
closes #42

* remove them

--- a/client/app/main/terms.jade
+++ b/client/app/main/terms.jade
@@ -17,8 +17,8 @@ main.main.row(role="main")
 
     ul
       li Post or submit information about another person or company without the authorization to do so.
-      li Interfere with any other userâ€™s right to privacy by trying to access or collect information about any individual users of this Website.
-      li Interfere with the functioning of the Website or with other peopleâ€™s use of the Website in any way, including:
+      li Interfere with any other user's right to privacy by trying to access or collect information about any individual users of this Website.
+      li Interfere with the functioning of the Website or with others use of the Website in any way, including:
         p Posting or transmitting any file or computer code or program (for example, viruses, worms, Trojan horses) that could damage or interfere with the operation of any hardware, software or telecommunications equipment.
         p Interfering with the functioning of the website, its servers or networks.
         p Hacking, defacing or modifying any portion of the website.
@@ -49,7 +49,7 @@ main.main.row(role="main")
 
     h4 Cookies
 
-    p We use persistent cookies. A cookie is a small text file that contains no personally identifying information and that is placed into the memory of your browser. If the lifetime of the cookie extends beyond the time you spend at the site, the file is saved for future reference and is a â€œpersistent cookie.â€
+    p We use persistent cookies. A cookie is a small text file that contains no personally identifying information and that is placed into the memory of your browser. If the lifetime of the cookie extends beyond the time you spend at the site, the file is saved for future reference and is a persistent cookie.
 
     p Persistent cookies allow us to include capabilities that provide a better user experience, make the website easier to navigate, and allow us to gather accurate information about the site so we can determine:
 
