Added home link

--- a/client/components/header/header.jade
+++ b/client/components/header/header.jade
@@ -11,6 +11,8 @@ header.site-header
   nav.row.navigation(role="navigation")
     ul.col-sm-8.col-sm-offset-2
       li
+        a(href="/") Home
+      li
         a(href="/about/") About
       li
         a(href="/contact/") Contact
